src/sections/home/styles/desktop/home-hero.css
.mb-tile {
	display: none;
}
.left-grid {
	width: calc(var(--left-col-span) * var(--block-size));
	position: fixed;
	top: 0;
	left: calc(var(--layout-left) + (var(--edge-gap) * var(--block-size)));
	display: grid;
	grid-template-columns: repeat(var(--left-col-span), var(--block-size));
	grid-auto-rows: var(--block-size);
}
.left-image-layer {
	z-index: 4;
}
.left {
	z-index: 6;
	pointer-events: none;

	h1,
	h2 {
		background: transparent;
		margin: 0;
	}
	h1 {
		font-size: 48px;
		color: var(--neutral-200);
		padding: 0;
	}
	h2 {
		color: var(--neutral-200);
		font-size: 22px;
		text-align: left;
		padding: 0;
		user-select: auto;
		margin-top: 4px;
	}
	#headline {
		font-family: 'Inter', sans-serif;
		font-size: 16px;
		color: var(--neutral-400);
		width: 360px;
		line-height: 24px;
		margin: 8px 0 0 0;
	}
}
.left-intro {
	grid-column: 1 / -1;
	grid-row: var(--left-row-intro) / span var(--left-row-intro-span);
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	gap: 0.5rem;
	pointer-events: auto;
}
.left-image {
	grid-column: 1 / -1;
	grid-row: var(--left-row-image) / span var(--left-row-image-span);
	display: flex;
	align-items: stretch;
}
.left-image .img-container-outer {
	width: 100%;
}
.left-image .img-container {
	margin: 0;
}
.left-links {
	grid-column: 1 / -1;
	grid-row: var(--left-row-links) / span var(--left-row-links-span);
	display: grid;
	position: relative;
	z-index: 6;
	grid-template-columns: repeat(var(--left-col-span), var(--block-size));
	grid-template-rows: var(--block-size);
	align-items: center;
	margin-top: -32px;
	pointer-events: auto;
}
.left-links .social-link {
	width: 100%;
	height: 100%;
}
.left-links .social-link:nth-child(1) {
	grid-column: 1 / span 3;
}
.left-links .social-link:nth-child(2) {
	grid-column: 4 / span 3;
	margin-left: calc(var(--block-size) / 4);
}

